Fixed collapsed navbar and removed bottom margin.

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
                 font-family: Roboto, Arial;
-                background: url("images/rando.jpg");
-                background-size: cover;
+
                 color: #ddddcc;
                 overflow: hidden;
                 display:flex;
@@ -11,9 +10,13 @@ body {
             .content h1, .content span, .content a {
                 color: #d3d6c8;
             }
-            .nav {
+            .navbar.nav-header {
+                margin-bottom: 0;
+                min-height: initial;
             }
             .body {
+                background: url("images/rando.jpg");
+                background-size: cover;
                 width: 100%;
                 flex: auto;
                 overflow-x: hidden;
